# rustcoin

lib/: Cargo.toml  block_gen.cbor  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml
node/src/: handler.rs  main.rs  util.rs
src/: main.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs
