[package]
name = "btclib"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.8"
chrono = { version = "0.4.41", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
spki = { version = "0.7.3", features = ["pem"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["net"] }
uint = "0.10.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
