[package]
name = "good-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
btclib = { version = "0.1.0", path = "../lib" }
clap = { version = "4.5.41", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
cursive = "0.21.1"
futures = "0.3.31"
kanal = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
text-to-ascii-art = "0.1.10"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = {version = "1.17.0", features = ["v4", "serde"] } 
